# SOK_Graph_Project

./: .gitignore  README.md  requirements.txt
SOK_Graph_Project/api/graph/api/model/: edge.py  graph.py  (+1 more)
SOK_Graph_Project/block_visualizer/: block_visualizer.py
SOK_Graph_Project/core/: pyproject.toml
SOK_Graph_Project/core/assets/main_view/: main_view.css  main_view_renderer.js
SOK_Graph_Project/core/service/use_cases/: bird_view.py  console_window.py  data_source_service.py  graph_search_filter.py  main_view.py  plugin_recognition.py  tree_view.py  workspace.py  workspace_manager.py
SOK_Graph_Project/core/templates/bird_view/: graph_bird_view_body.html  graph_bird_view_header.html
SOK_Graph_Project/core/templates/console_window/: graph_console_window_body.html  graph_console_window_header.html
SOK_Graph_Project/core/templates/main_view/: graph_main_view_body.html  graph_main_view_header.html
SOK_Graph_Project/core/templates/plugin_management/: modal_plugin_manager.html
SOK_Graph_Project/core/templates/tool_bar/: graph_tool_bar_body.html  graph_tool_bar_header.html
SOK_Graph_Project/core/templates/tree_view/: graph_tree_view_body.html  graph_tree_view_header.html
SOK_Graph_Project/core/templates/workspace_bar/: graph_workspace_bar_body.html  modal_open_workspace.html
SOK_Graph_Project/csv_data_source/csv_data/: edges.csv  edges_cyclic.csv
SOK_Graph_Project/csv_data_source/csv_db/: csv_db.py
SOK_Graph_Project/flask/: app.py
SOK_Graph_Project/flask/static/: app_ui.js  style.css
SOK_Graph_Project/flask/templates/: base.html  index.html
SOK_Graph_Project/json_data_source/json_data/: test_graph.json
SOK_Graph_Project/json_data_source/json_db/: json_db.py
SOK_Graph_Project/plugins/block_visualizer/: block_visualizer.py  pyproject.toml
SOK_Graph_Project/plugins/block_visualizer/graph_block_visualizer/: plugin_main.py
SOK_Graph_Project/plugins/csv_data_source/: csv_data_source.py  pyproject.toml
SOK_Graph_Project/plugins/csv_data_source/csv_data/: csv.csv
SOK_Graph_Project/plugins/csv_data_source/csv_data/graph_acyclic/: nodes.csv
SOK_Graph_Project/plugins/csv_data_source/csv_data/graph_cyclic/: dir.json
SOK_Graph_Project/plugins/csv_data_source/graph_csv_source/: plugin_main.py
SOK_Graph_Project/plugins/json_data_source/: json_data_source.py  pyproject.toml
SOK_Graph_Project/plugins/json_data_source/graph_json_source/: plugin_main.py
SOK_Graph_Project/plugins/json_data_source/json_data/: acyclic_undirected.json  cyclic_directed.json
SOK_Graph_Project/plugins/json_data_source/json_db/: json_db.py
SOK_Graph_Project/plugins/simple_visualizer/: pyproject.toml  simple_visualizer.py
SOK_Graph_Project/plugins/simple_visualizer/graph_simple_visualizer/: plugin_main.py
SOK_Graph_Project/simple_visualizer/: simple_visualizer.py
(+2 files in other folders)
