[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sok-graph-json-data-source"
version = "1.0.0"
description = "JSON data source plugin for SOK Graph Project"
requires-python = ">=3.10"
dependencies = [
    "sok-graph-api",
    "sok-graph-core",
]

[project.entry-points."sok_graph.data_sources"]
json = "graph_json_source.plugin_main:JsonDataSourcePlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["graph_json_source*"]