[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sok-graph-simple-visualizer"
version = "1.0.0"
description = "Simple visualizer plugin for SOK Graph Project"
requires-python = ">=3.10"
dependencies = [
    "sok-graph-api",
    "sok-graph-core",
]

[project.entry-points."sok_graph.visualizers"]
simple_visualizer = "graph_simple_visualizer.plugin_main:SimpleVisualizer"

[tool.setuptools.packages.find]
where = ["."]
include = ["graph_simple_visualizer*"]